# cv-pdf-generator

./: .gitignore  LICENSE  cv_ibl.py  images.py  models.py  pyproject.toml  regex_stuff.py
data/: unit_codes.json
