[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cv-ibl"
version = "0.1.0"
description = "Batch CV/PDF generator for IBL students"
requires-python = ">=3.9"
dependencies = [
    "pypdf>=4.0",
    "reportlab>=4.0",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
